Shorten cache time on sw

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,14 @@
       "source" : "/index.html",
       "destination" : "/",
       "type" : 301
-    }]
+    }],
+    "headers": [{
+      "source" : "sw.js",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "max-age=300"
+      }]
+    }],
+    "cleanUrls": true
   }
 }
